# rom-weaver

./: .dockerignore  .gitignore  .gitmodules  .mise.toml  AGENTS.md  CHANGELOG.md  CLA.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  NOTICE  README.md  REFERENCES.md  SECURITY.md  THIRD_PARTY_LICENSES.md  TODO.md  commitlint.config.mjs  deny.toml  docker-compose.yml  install.ps1  install.sh  lefthook.yml  package-lock.json  package.json  release-please-config.json
crates/rom-weaver-app/: Cargo.toml
crates/rom-weaver-app/examples/: apply_dcp.rs  dump_dcp.rs  dump_gdrom.rs  rebuild_disc.rs  roundtrip.rs
crates/rom-weaver-app/src/: bundle_apply.rs  bundle_command.rs  bundle_create.rs  bundle_download.rs  bundle_load.rs  bundle_parse.rs  bundle_schema.rs  cheats_apply.rs  checksum_command.rs  checksum_streaming.rs  checksum_variants.rs  command_args.rs  command_dispatch.rs  commands_and_selection.rs  compress_trim_batch.rs  compression.rs  compression_planning.rs  extract_batch.rs  extract_batch_plan.rs  extract_command.rs  extract_progress.rs  header_detection_and_finalize.rs  header_fix_batch.rs  header_repair.rs  header_repair_byte_io.rs  header_repair_n64.rs  header_repair_systems.rs  ingest_command.rs  lib.rs  list_command.rs  manifest_apply.rs  manifest_command.rs  manifest_create.rs  manifest_download.rs  manifest_parse.rs  manifest_schema.rs  nested_extract.rs  output_details.rs  patch_apply.rs  patch_apply_dcp.rs  (+19 more)
crates/rom-weaver-app/src/cheats/: action_replay.rs  game_genie.rs  layout.rs  mod.rs
crates/rom-weaver-app/src/dcp/: apply.rs  manifest.rs  mod.rs  rebuild.rs
crates/rom-weaver-app/src/gdrom/: iso_writer.rs  mod.rs  mode1.rs
crates/rom-weaver-chd/: Cargo.toml
crates/rom-weaver-chd-sys/: Cargo.toml  README.md  build.rs
crates/rom-weaver-chd-sys/native/: rom_weaver_mame_chd.cpp  rom_weaver_mame_chdcodec.cpp
crates/rom-weaver-chd-sys/native/mame_compat/: avhuff.h  cdrom.h  corefile.h  coretmpl.h  flac.h  ioprocs.h  osdcore.h  osdfile.h  rom_weaver_mame_cdrom.cpp  rom_weaver_mame_corefile.cpp  rom_weaver_mame_ioprocs.cpp  rom_weaver_mame_osdcore.cpp  strformat.h  utilfwd.h
crates/rom-weaver-chd-sys/native/mame_upstream/: chd.cpp  huffman.cpp
crates/rom-weaver-chd-sys/src/: lib.rs
crates/rom-weaver-chd/src/: handler.rs  lib.rs
crates/rom-weaver-chd/src/chd/: cd_sector_ecc.rs  codec_encoders.rs  compressed_map.rs  core.rs  create_encoding.rs  create_pipeline.rs  disc_extract.rs  handler_root.rs  handler_trait.rs  hunk_compression.rs  infer.rs  read_session.rs  types_and_read_session.rs
crates/rom-weaver-chd/tests/unit/: chd.rs
crates/rom-weaver-cheats/: Cargo.toml
crates/rom-weaver-cheats/src/: action_replay.rs  layout.rs  lib.rs
crates/rom-weaver-cheats/tests/unit/: cheats.rs
crates/rom-weaver-checksum/: Cargo.toml  README.md
crates/rom-weaver-checksum/src/: core.rs  engine.rs  execution.rs  identify_pack.rs  lib.rs  planning.rs  platform_detection.rs  reporting.rs  rom_headers.rs  rom_identity.rs  tests.rs  variants.rs
crates/rom-weaver-checksum/tests/unit/: engine.rs
crates/rom-weaver-cli/: Cargo.toml  README.md
crates/rom-weaver-cli/examples/: concurrent_extract.rs
crates/rom-weaver-cli/src/: app.rs  bundle_apply.rs  bundle_create.rs  checksum_command.rs  checksum_variants.rs  cli.rs  command_args.rs  commands_and_selection.rs  compress_trim_batch.rs  compression_planning.rs  extract_command.rs  header_detection_and_finalize.rs  header_repair.rs  ingest_command.rs  interactive.rs  lib.rs  main.rs  nested_extract.rs  patch_apply.rs  patch_apply_dcp.rs  patch_commands.rs  patch_create.rs  patch_validate.rs  path_access.rs  probe_command.rs  reporters.rs  tools.rs  trim_and_inspect_details.rs  typegen_main.rs  wasm_parse.rs
crates/rom-weaver-cli/src/render/: commands.rs  mod.rs  prompt.rs  reporter.rs
crates/rom-weaver-cli/tests/: cli_smoke.rs  progress_percent_scale.rs  trace_logging.rs
crates/rom-weaver-cli/tests/cli_smoke/: bundle.rs  chd.rs  checksum.rs  compress.rs  ingest.rs  inspect_extract.rs  manifest.rs  patch.rs  patch_disc.rs  permissions.rs  probe_extract.rs  rvz_z3ds.rs  shared.rs  (+1 more)
crates/rom-weaver-codecs/: Cargo.toml
crates/rom-weaver-codecs/src/: backend.rs  backend_trait.rs  definitions.rs  helpers.rs  lib.rs  registry.rs
crates/rom-weaver-containers/: Cargo.toml  README.md  build.rs
crates/rom-weaver-containers/libarchive/: build.rs
crates/rom-weaver-containers/src/: archive_entries.rs  archive_formats.rs  chd.rs  constants.rs  extract_support.rs  formats.rs  lib.rs  libarchive_support.rs
crates/rom-weaver-core/: Cargo.toml  README.md  build.rs
crates/rom-weaver-core/src/: access.rs  cancel.rs  common_files.rs  concurrency.rs  context.rs  disc_sheet.rs  env.rs  error.rs  formatting.rs  io.rs  lib.rs  patch_support.rs  progress.rs  prompt.rs  registry.rs  report_details.rs  selection.rs  threads.rs
crates/rom-weaver-core/tests/: no_full_buffer_guard.rs
crates/rom-weaver-dcp/: Cargo.toml
crates/rom-weaver-dcp/examples/: apply_dcp.rs  dump_dcp.rs  rebuild_disc.rs
crates/rom-weaver-dcp/src/: apply.rs  lib.rs  manifest.rs  rebuild.rs  zip.rs
crates/rom-weaver-libarchive/: Cargo.toml
crates/rom-weaver-libarchive-sys/: Cargo.toml  build.rs
crates/rom-weaver-libarchive-sys/src/: lib.rs
crates/rom-weaver-libarchive/src/: entries.rs  lib.rs  read.rs  write.rs
crates/rom-weaver-nod/: Cargo.toml
crates/rom-weaver-nod/src/: common.rs  lib.rs  python.rs  read.rs  write.rs
crates/rom-weaver-patches/: Cargo.toml  README.md  build.rs
crates/rom-weaver-patches/src/: aps_n64.rs  apsgba.rs  bdf.rs  bps.rs  bsp.rs  bsp_native_vm.rs  bsp_vm_runtime.js  dldi.rs  dps.rs  gdiff.rs  hdiffpatch.rs  ips.rs  lib.rs  ninja1.rs  pat.rs  pds.rs  pmsr.rs  ppf.rs  qbsdiff_support.rs  rup.rs  shared.rs  solid.rs  spatch.rs  test_support.rs  ups.rs  varint.rs  vcdiff.rs  xdelta_ffi.rs
crates/rom-weaver-xdelta/: Cargo.toml
crates/rom-weaver-xdelta/src/: lib.rs
tools/rom-weaver-typegen/: Cargo.toml
tools/rom-weaver-typegen/src/: main.rs
(+328 files in other folders)
