[workspace]
members = [
    "crates/rom-weaver-app",
    "crates/rom-weaver-chd",
    "crates/rom-weaver-cheats",
    "crates/rom-weaver-checksum",
    "crates/rom-weaver-cli",
    "crates/rom-weaver-codecs",
    "crates/rom-weaver-containers",
    "crates/rom-weaver-core",
    "crates/rom-weaver-dcp",
    "crates/rom-weaver-gdrom",
    "crates/rom-weaver-libarchive",
    "crates/rom-weaver-libarchive-sys",
    "crates/rom-weaver-patches",
    "crates/rom-weaver-xdelta",
    "tools/rom-weaver-typegen",
]
exclude = ["vendor/nod"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.95"
version = "0.4.0"

[workspace.dependencies]
adler2 = "2.0.1"
assert_cmd = "2.1.1"
assert_fs = "1.1.3"
blake3 = "1.8.2"
bzip2 = { version = "0.6.1", default-features = false, features = ["bzip2-sys"] }
ciso = { version = "0.2.1", default-features = false, features = ["sync"] }
chd = { version = "0.3.4", features = ["verify_block_crc", "codec_api", "fast_zstd"] }
clap = { version = "4.5.51", features = ["derive"] }
claxon = "0.4.3"
crc = "3.4.0"
crc16 = "0.4.0"
crc32c = "0.6.8"
crc32fast = "1.5.0"
flate2 = { version = "1.1.5", default-features = false, features = ["zlib"] }
miniz_oxide = "0.8.9"
flacenc = { version = "0.5.1", default-features = false }
lzma-rust2 = { version = "0.16.2", default-features = false, features = ["std", "encoder", "xz", "optimization"] }
libc = "0.2.137"
libz-sys = { version = "1.1.28", default-features = false }
liblzma-sys = { version = "0.4.6", features = ["static"] }
md-5 = "0.11.0"
nod = { path = "vendor/nod/nod", version = "2.0.0-alpha.8", default-features = false, features = ["extract-bzip2-vendored", "extract-lzma-vendored", "extract-zlib-vendored", "extract-zstd-vendored", "compress-zstd-vendored", "threading"] }
qbsdiff = "1.4.4"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha1 = "0.11.0"
sha2 = "0.10.9"
suffix_array = "0.5"
tar = "0.4.44"
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["json"] }
ts-rs = "12.0.1"
xdvdfs = { version = "0.8.3", default-features = false, features = ["std", "read", "write", "sync"] }
zeekstd = "0.6.2"
zstd-sys = { version = "2.0.16", default-features = false }
zstd = "0.13.3"
rom-weaver-libarchive-sys = { path = "crates/rom-weaver-libarchive-sys", default-features = false }
rom-weaver-libarchive = { path = "crates/rom-weaver-libarchive", default-features = false }

[profile.release]
lto = "fat"
strip = true
opt-level = 3
panic = "abort"
codegen-units = 16

[profile.wasm-release]
inherits = "release"
codegen-units = 1
debug = 0
incremental = false
lto = "fat"
opt-level = 3
panic = "abort"
strip = "symbols"

[patch.crates-io]
akv = { path = "vendor/akv-0.1.0" }
chd = { path = "vendor/chd-0.3.4" }
qbsdiff = { path = "vendor/qbsdiff-1.4.4" }
xdvdfs = { path = "vendor/xdvdfs-0.8.3" }
