[workspace]
members = [
    "crates/rom-weaver-app",
    "crates/rom-weaver-chd",
    "crates/rom-weaver-checksum",
    "crates/rom-weaver-cli",
    "crates/rom-weaver-codecs",
    "crates/rom-weaver-containers",
    "crates/rom-weaver-core",
    "crates/rom-weaver-dcp",
    "crates/rom-weaver-gdrom",
    "crates/rom-weaver-libarchive",
    "crates/rom-weaver-libarchive-sys",
    "crates/rom-weaver-nod",
    "crates/rom-weaver-patches",
    "crates/rom-weaver-xdelta",
    "vendor/chd-0.3.4",
    "vendor/xdvdfs-0.8.3",
]
exclude = ["vendor/nod"]
resolver = "2"

[workspace.package]
authors = ["Brandon Casey"]
description = "A local-first offline toolkit for ROMs and ROM hack patches. Inspect, extract, checksum, compress, trim, apply patches, create patches, or bundle shareable patch manifests at native speed. In your browser or terminal."
edition = "2024"
homepage = "https://rom-weaver.com"
license = "AGPL-3.0-or-later"
publish = ["crates-io"]
readme = "README.md"
repository = "https://github.com/brandonocasey/rom-weaver"
rust-version = "1.95"
version = "0.5.0"

# Lint policy in the manifest rather than only in the `mise run clippy` flags,
# so a bare `cargo clippy` and rust-analyzer's in-editor diagnostics enforce the
# same thing CI does. The mise task still adds `-D warnings`; that is what makes
# these fail a build rather than just print. Only the first-party crates opt in
# (via `[lints] workspace = true`) - the vendored forks under vendor/ and
# crates/rom-weaver-nod are excluded from the clippy task and must stay
# lint-clean against *their* upstream, not ours.
[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[workspace.dependencies]
adler2 = "2.0.1"
assert_cmd = "2.1.1"
assert_fs = "1.1.3"
blake3 = "1.8.2"
# Load-bearing for BDF byte-parity: upstream `qbsdiff` depends on `bzip2` with
# default features, which pulls in the pure-Rust `libbz2-rs-sys` backend. Feature
# unification means this pin is the only thing keeping `bzip2` on the C backend
# (`bzip2` selects via `#[cfg(feature = "bzip2-sys")]`). Dropping it silently
# swaps the bzip2 implementation underneath BDF patch output.
bzip2 = { version = "0.6.1", default-features = false, features = ["bzip2-sys"] }
ciso = { version = "0.2.1", default-features = false, features = ["sync"] }
chd = { package = "rom-weaver-chd-core", path = "vendor/chd-0.3.4", version = "0.5.0", features = ["verify_block_crc", "codec_api", "fast_zstd"] }
clap = { version = "4.5.51", features = ["derive", "string"] }
claxon = "0.4.3"
crc = "3.4.0"
crc16 = "0.4.0"
crc32c = "0.6.8"
crc32fast = "1.5.0"
digest = { version = "0.11.0", default-features = false }
flate2 = { version = "1.1.5", default-features = false, features = ["zlib"] }
miniz_oxide = "0.9.1"
flacenc = { version = "0.5.1", default-features = false }
lzma-rust2 = { version = "0.16.2", default-features = false, features = ["std", "encoder", "xz", "optimization"] }
libc = "0.2.137"
libz-sys = { version = "1.1.28", default-features = false }
liblzma-sys = { version = "0.4.6", features = ["static"] }
md-5 = "0.11.0"
nod = { package = "rom-weaver-nod", path = "crates/rom-weaver-nod", version = "0.5.0", default-features = false, features = ["compress-bzip2-vendored", "compress-lzma-vendored", "compress-zlib-vendored", "compress-zstd-vendored", "threading"] }
qbsdiff = "1.4.4"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha1 = "0.11.0"
sha2 = "0.11.0"
suffix_array = "0.5"
tar = "0.4.44"
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["json"] }
ts-rs = "12.0.1"
xdvdfs = { package = "rom-weaver-xdvdfs", path = "vendor/xdvdfs-0.8.3", version = "0.5.0", default-features = false, features = ["std", "read", "write", "sync"] }
zerocopy = { version = "0.8", features = ["alloc", "derive"] }
zeekstd = "0.6.2"
zstd-sys = { version = "2.0.16", default-features = false }
zstd = "0.13.3"
rom-weaver-libarchive-sys = { path = "crates/rom-weaver-libarchive-sys", version = "0.5.0", default-features = false }
rom-weaver-libarchive = { path = "crates/rom-weaver-libarchive", version = "0.5.0", default-features = false }

[profile.release]
lto = "fat"
strip = true
opt-level = 3
panic = "abort"
codegen-units = 16

[profile.wasm-release]
inherits = "release"
codegen-units = 1
debug = 0
incremental = false
lto = "fat"
opt-level = 3
panic = "abort"
strip = "symbols"
