[package]
name = "rom-weaver-app"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
typescript-types = ["dep:ts-rs", "rom-weaver-core/typescript-types"]

[dependencies]
rom-weaver-checksum = { path = "../rom-weaver-checksum" }
rom-weaver-codecs = { path = "../rom-weaver-codecs" }
rom-weaver-containers = { path = "../rom-weaver-containers" }
rom-weaver-core = { path = "../rom-weaver-core" }
rom-weaver-libarchive.workspace = true
rom-weaver-patches = { path = "../rom-weaver-patches" }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
ts-rs = { workspace = true, optional = true }
xdvdfs.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
tracing-subscriber = { version = "0.3.20", default-features = false, features = ["fmt", "std"] }

[[bin]]
name = "rom-weaver-app"
path = "src/wasm_main.rs"
