[package]
name = "rom-weaver-app"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
typescript-types = ["dep:ts-rs", "rom-weaver-core/typescript-types"]

[dependencies]
flate2.workspace = true
rom-weaver-checksum = { path = "../rom-weaver-checksum", version = "0.5.0" }
rom-weaver-containers = { path = "../rom-weaver-containers", version = "0.5.0" }
rom-weaver-core = { path = "../rom-weaver-core", version = "0.5.0" }
rom-weaver-dcp = { path = "../rom-weaver-dcp", version = "0.5.0" }
rom-weaver-gdrom = { path = "../rom-weaver-gdrom", version = "0.5.0" }
rom-weaver-libarchive = { workspace = true, default-features = false }
rom-weaver-patches = { path = "../rom-weaver-patches", version = "0.5.0" }
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
ts-rs = { workspace = true, optional = true }
xdvdfs.workspace = true
zstd.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap.workspace = true
tracing-subscriber.workspace = true
# Native-only manifest URL downloads; the wasm build never sees this (the
# browser prefetches with JS fetch instead).
ureq = { version = "3", default-features = false, features = ["rustls"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tracing-subscriber = { version = "0.3.20", default-features = false, features = ["fmt", "std"] }

[[bin]]
name = "rom-weaver-app"
path = "src/wasm_main.rs"

[[bin]]
name = "rom-weaver-typegen"
path = "src/typegen_main.rs"
required-features = ["typescript-types"]

[lints]
workspace = true
