[package]
name = "rom-weaver-chd-sys"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true
links = "rom_weaver_mame_chd"

[lib]
name = "rom_weaver_chd_sys"

[dependencies]
libflac-sys.workspace = true
libz-sys.workspace = true
zstd-sys.workspace = true

[build-dependencies]
cc.workspace = true
