[package]
name = "rom-weaver-chd"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = []
test-utils = []

[dependencies]
chd.workspace = true
crc.workspace = true
flacenc.workspace = true
flate2.workspace = true
liblzma-sys.workspace = true
serde_json.workspace = true
rom-weaver-codecs = { path = "../rom-weaver-codecs" }
rom-weaver-checksum = { path = "../rom-weaver-checksum" }
rom-weaver-core = { path = "../rom-weaver-core" }
sha1.workspace = true
tracing.workspace = true
zstd.workspace = true
