[package]
name = "rom-weaver-chd"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = []
test-utils = []

[dependencies]
chd.workspace = true
crc.workspace = true
flacenc.workspace = true
flate2.workspace = true
liblzma-sys.workspace = true
serde_json.workspace = true
rom-weaver-codecs = { path = "../rom-weaver-codecs", version = "0.5.0" }
rom-weaver-checksum = { path = "../rom-weaver-checksum", version = "0.5.0" }
rom-weaver-core = { path = "../rom-weaver-core", version = "0.5.0" }
sha1.workspace = true
tracing.workspace = true
zstd.workspace = true
