[package]
name = "rom-weaver-checksum"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
adler2.workspace = true
blake3 = { workspace = true, features = ["rayon"] }
crc16.workspace = true
crc32c.workspace = true
crc32fast.workspace = true
md-5.workspace = true
rayon = { workspace = true }
rom-weaver-core = { path = "../rom-weaver-core", version = "0.5.0" }
serde_json.workspace = true
sha1.workspace = true
sha2.workspace = true
tracing.workspace = true

[dev-dependencies]
proptest = "1.6.0"

[lints]
workspace = true
