[package]
name = "rom-weaver-checksum"
authors.workspace = true
description = "Checksum engines for rom-weaver: CRC-32, CRC-32C, CRC-16, Adler-32, MD5, SHA-1, SHA-256, and BLAKE3, plus a single-pass streaming engine with copier-header-aware and N64 byte-order variants."
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
adler2.workspace = true
blake3 = { workspace = true, features = ["rayon"] }
crc16.workspace = true
crc32c.workspace = true
crc32fast.workspace = true
md-5.workspace = true
rayon = { workspace = true }
rom-weaver-core = { path = "../rom-weaver-core", version = "0.6.5" }
serde_json.workspace = true
sha1.workspace = true
sha2.workspace = true
tracing.workspace = true

[dev-dependencies]
proptest = "1.6.0"

[package.metadata.cargo-machete]
# cargo-machete matches the crate *name*; `md-5` is imported as `md5`
# (src/core.rs), so it reads as unused. Same for the other md-5 users below.
ignored = ["md-5"]

[lints]
workspace = true
