[package]
name = "rom-weaver-cli"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
rom-weaver-app = { path = "../rom-weaver-app", version = "0.5.0" }
rom-weaver-core = { path = "../rom-weaver-core", version = "0.5.0" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap.workspace = true
clap_complete = "4.5"
# Light interactive prompts for `apply --tui`; built on `console`, already in
# the tree via indicatif. default-features off drops editor/password/fuzzy.
dialoguer = { version = "0.12", default-features = false }
indicatif = "0.18.4"
owo-colors = "4.3.0"
serde_json.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
assert_fs.workspace = true
clap_mangen = "0.3.0"
flate2.workspace = true
nod = { workspace = true, features = ["compress-lzma"] }
rom-weaver-containers = { path = "../rom-weaver-containers", version = "0.5.0" }
serde_json.workspace = true
tar.workspace = true
zstd.workspace = true

[[bin]]
name = "rom-weaver"
path = "src/main.rs"

[lints]
workspace = true
