[package]
name = "rom-weaver-cli"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
rom-weaver-app = { path = "../rom-weaver-app", version = "0.5.0" }
rom-weaver-core = { path = "../rom-weaver-core", version = "0.5.0" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap.workspace = true
clap_complete = "4.5"
# Light interactive prompts for `apply --tui`; built on `console`, already in
# the tree via indicatif. default-features off drops editor/password/fuzzy.
dialoguer = { version = "0.12", default-features = false }
indicatif = "0.18.4"
owo-colors = "4.3.0"
serde_json.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
assert_fs.workspace = true
clap_mangen = "0.3.0"
flate2.workspace = true
rom-weaver-containers = { path = "../rom-weaver-containers", version = "0.5.0" }
serde_json.workspace = true
tar.workspace = true
zstd.workspace = true

[[bin]]
name = "rom-weaver"
path = "src/main.rs"

[package.metadata.binstall]
pkg-fmt = "bin"
bin-dir = "{ bin }{ binary-ext }"
disabled-strategies = ["quick-install", "compile"]

[package.metadata.binstall.overrides.aarch64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/rom-weaver-darwin-arm64"

[package.metadata.binstall.overrides.x86_64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/rom-weaver-darwin-x64"

[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/rom-weaver-linux-x64-gnu"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/rom-weaver-win32-x64-msvc.exe"

[lints]
workspace = true
