[package]
name = "rom-weaver-cli"
authors.workspace = true
description = "A local-first offline toolkit for ROMs and ROM hack patches. Inspect, extract, checksum, compress, trim, apply patches, create patches, or bundle shareable patch manifests at native speed."
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
name = "rom_weaver_app"
path = "src/lib.rs"

[features]
typescript-types = ["dep:ts-rs", "rom-weaver-core/typescript-types"]
wasm-app = []

[dependencies]
crc32fast.workspace = true
flate2.workspace = true
miniz_oxide.workspace = true
rayon.workspace = true
rom-weaver-checksum = { path = "../rom-weaver-checksum", version = "0.6.1" }
rom-weaver-containers = { path = "../rom-weaver-containers", version = "0.6.1" }
rom-weaver-core = { path = "../rom-weaver-core", version = "0.6.1" }
rom-weaver-patches = { path = "../rom-weaver-patches", version = "0.6.1" }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
ts-rs = { workspace = true, optional = true }
zstd.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap.workspace = true
clap_complete = "4.5"
# Light interactive prompts for `apply --tui`; built on `console`, already in
# the tree via indicatif. default-features off drops editor/password/fuzzy.
dialoguer = { version = "0.12", default-features = false }
indicatif = "0.18.4"
owo-colors = "4.3.0"
tracing-subscriber.workspace = true
# Native-only manifest URL downloads; the wasm build never sees this (the
# browser prefetches with JS fetch instead).
ureq = { version = "3", default-features = false, features = ["rustls"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tracing-subscriber = { version = "0.3.20", default-features = false, features = ["fmt", "std"] }

[dev-dependencies]
assert_cmd.workspace = true
assert_fs.workspace = true
clap_mangen = "0.3.0"
flate2.workspace = true
tar.workspace = true

[[bin]]
name = "rom-weaver"
path = "src/main.rs"

[[bin]]
name = "rom-weaver-app"
path = "src/wasm_main.rs"
required-features = ["wasm-app"]

[[bin]]
name = "rom-weaver-typegen"
path = "src/typegen_main.rs"
required-features = ["typescript-types"]

[package.metadata.binstall]
pkg-fmt = "bin"
bin-dir = "{ bin }{ binary-ext }"
disabled-strategies = ["quick-install", "compile"]

[package.metadata.binstall.overrides.aarch64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/rom-weaver-darwin-arm64"

[package.metadata.binstall.overrides.x86_64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/rom-weaver-darwin-x64"

[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/rom-weaver-linux-x64-gnu"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/rom-weaver-win32-x64-msvc.exe"

[lints]
workspace = true
