[package]
name = "rom-weaver-codecs"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
bzip2.workspace = true
flate2.workspace = true
lzma-rust2.workspace = true
rom-weaver-core = { path = "../rom-weaver-core" }
zstd.workspace = true
