[package]
name = "rom-weaver-codecs"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
bzip2.workspace = true
flate2.workspace = true
lzma-rust2.workspace = true
rom-weaver-core = { path = "../rom-weaver-core", version = "0.5.0" }
zstd.workspace = true

[lints]
workspace = true
