[package]
name = "rom-weaver-containers"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
ciso.workspace = true
nod.workspace = true
rayon.workspace = true
rom-weaver-codecs = { path = "../rom-weaver-codecs", version = "0.5.0" }
rom-weaver-checksum = { path = "../rom-weaver-checksum", version = "0.5.0" }
rom-weaver-chd = { path = "../rom-weaver-chd", version = "0.5.0" }
rom-weaver-core = { path = "../rom-weaver-core", version = "0.5.0" }
rom-weaver-libarchive = { workspace = true, default-features = false, features = ["write-archives"] }
serde_json.workspace = true
tracing.workspace = true
# Direct dependencies of the vendored `src/xdvdfs` module; they leave with it.
arrayvec.workspace = true
async-trait.workspace = true
bincode.workspace = true
encoding_rs.workspace = true
maybe-async = { workspace = true, features = ["is_sync"] }
proc-bitfield.workspace = true
serde.workspace = true
serde-big-array.workspace = true
zstd.workspace = true
zeekstd.workspace = true

[dev-dependencies]
chd.workspace = true
claxon.workspace = true
flate2.workspace = true
rand.workspace = true
nod = { workspace = true, features = ["compress-lzma"] }
rom-weaver-chd = { path = "../rom-weaver-chd", version = "0.5.0", features = ["test-utils"] }
tar.workspace = true

[package.metadata.cargo-machete]
# maybe-async expands its async traits to async-trait at macro expansion time.
ignored = ["async-trait"]

[lints]
workspace = true
