[package]
name = "rom-weaver-containers"
authors.workspace = true
description = "Archive and disc-image handlers for rom-weaver: probe, list, and extract ZIP, 7z, RAR, tar, CHD, RVZ, Z3DS, CSO, PBP, GCZ, WIA, WBFS, XISO and more; create ZIP, 7z, CHD, RVZ, and Z3DS."
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true
links = "archive"

[features]
default = [
    "compress-bzip2-vendored",
    "compress-lzma-vendored",
    "compress-zlib-vendored",
    "compress-zstd-vendored",
    "threading",
]
compress-bzip2 = []
compress-bzip2-vendored = ["compress-bzip2"]
compress-lzma = []
compress-lzma-vendored = ["compress-lzma"]
compress-zlib = ["dep:adler2"]
compress-zlib-vendored = ["compress-zlib"]
compress-zstd = []
compress-zstd-vendored = ["compress-zstd"]
libarchive-write-extra = []
threading = ["dep:crossbeam-channel", "dep:crossbeam-utils"]

[dependencies]
adler2 = { workspace = true, optional = true }
aes.workspace = true
base16ct.workspace = true
block-padding.workspace = true
bytes.workspace = true
bzip2-sys = { workspace = true, features = ["static"] }
cbc.workspace = true
chd.workspace = true
ciso.workspace = true
crc32fast.workspace = true
crossbeam-channel = { workspace = true, optional = true }
crossbeam-utils = { workspace = true, optional = true }
crypto-common.workspace = true
digest.workspace = true
dyn-clone.workspace = true
encoding_rs.workspace = true
flacenc.workspace = true
flate2.workspace = true
itertools.workspace = true
libc.workspace = true
# The folded CHD module uses liblzma unconditionally, so this cannot stay
# optional behind compress-lzma-vendored the way the inlined nod source alone
# would allow.
liblzma-sys.workspace = true
libz-sys = { workspace = true, features = ["libc", "static", "stock-zlib"] }
lz4-sys = "1.9.4"
lru.workspace = true
md-5.workspace = true
polonius-the-crab.workspace = true
rayon.workspace = true
rom-weaver-checksum = { path = "../rom-weaver-checksum", version = "0.6.1" }
rom-weaver-core = { path = "../rom-weaver-core", version = "0.6.1" }
sha1.workspace = true
serde_json.workspace = true
simple_moving_average.workspace = true
tracing.workspace = true
# Direct dependencies of the vendored `src/xdvdfs` module; they leave with it.
arrayvec.workspace = true
async-trait.workspace = true
bincode.workspace = true
maybe-async = { workspace = true, features = ["is_sync"] }
proc-bitfield.workspace = true
serde.workspace = true
serde-big-array.workspace = true
thiserror.workspace = true
xxhash-rust.workspace = true
zerocopy.workspace = true
zstd-sys.workspace = true
zstd.workspace = true
zeekstd.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
liblzma-sys = { workspace = true, features = ["parallel"] }
zstd-sys = { workspace = true, features = ["zstdmt"] }

[target.wasm32-wasip1-threads.dependencies]
liblzma-sys = { workspace = true, features = ["parallel"] }
zstd-sys = { workspace = true, features = ["zstdmt"] }

[target.'cfg(all(not(target_vendor = "apple"), not(target_arch = "wasm32")))'.dependencies]
openssl-sys = { version = "0.9.80", features = ["vendored"] }

[build-dependencies]
bindgen = "0.72.1"
cmake = "0.1.58"
path-slash = "0.2.1"

[dev-dependencies]
claxon.workspace = true
rand.workspace = true
tar.workspace = true

[package.metadata.cargo-machete]
# maybe-async expands its async traits to async-trait at macro expansion time.
ignored = ["async-trait", "crypto-common", "libc", "md-5"]

[lints]
workspace = true
