[package]
name = "rom-weaver-core"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
typescript-types = ["dep:ts-rs"]

[dependencies]
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
ts-rs = { workspace = true, optional = true, features = ["serde-json-impl"] }

# Used only to query physical RAM for memory-bounded parallelism on native hosts.
[target.'cfg(not(target_family = "wasm"))'.dependencies]
libc.workspace = true

[dev-dependencies]
assert_fs.workspace = true
