[package]
name = "rom-weaver-dcp"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
crc32fast.workspace = true
miniz_oxide.workspace = true
rom-weaver-core = { path = "../rom-weaver-core", version = "0.5.0" }
rom-weaver-gdrom = { path = "../rom-weaver-gdrom", version = "0.5.0" }
rom-weaver-xdelta = { path = "../rom-weaver-xdelta", version = "0.5.0" }
tracing.workspace = true
